# loam-sdk

./: .gitignore  Cargo.toml  justfile
.cargo/: config.toml
.github/workflows/: rust.yml  tests.yml
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs  metadata.rs  registry.rs  test.rs  util.rs
contracts/registry/src/metadata/: contract.rs  wasm.rs
contracts/registry/src/registry/: contract.rs  wasm.rs
crates/loam-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/loam-cli/src/commands/dev/: docker.rs  mod.rs
crates/loam-cli/tests/it/: util.rs
crates/loam-cli/tests/it/build_clients/: contracts.rs  dev.rs  init_script.rs
crates/loam-sdk/: CHANGELOG.md  Cargo.toml  README.md
crates/loam-sdk-macro/: CHANGELOG.md  Cargo.toml  README.md
crates/loam-sdk-macro/src/: lib.rs  storage.rs  subcontract.rs
crates/loam-sdk-macro/src/subcontract/: into_key.rs  lazy.rs  storage.rs
crates/loam-sdk/src/: lib.rs
crates/loam-soroban-sdk/: CHANGELOG.md  Cargo.toml  README.md
crates/loam-soroban-sdk/src/: lib.rs  loam_storage.rs
crates/loam-subcontract-core/: CHANGELOG.md  Cargo.toml
crates/loam-subcontract-ft/: CHANGELOG.md  Cargo.toml
examples/: write_cargo.py
examples/soroban/account/: Cargo.toml
examples/soroban/account/src/: error.rs  lib.rs  subcontract.rs  test.rs
examples/soroban/alloc/: Cargo.toml
examples/soroban/alloc/src/: lib.rs  subcontract.rs  test.rs
examples/soroban/atomic_multiswap/: Cargo.toml
examples/soroban/atomic_multiswap/src/: lib.rs  subcontract.rs  test.rs
examples/soroban/atomic_multiswap/test_snapshots/test/: test_multi_swap_with_duplicate_account.1.json
examples/soroban/atomic_swap/: Cargo.toml
examples/soroban/atomic_swap/src/: error.rs  lib.rs  subcontract.rs  test.rs
examples/soroban/auth/: Cargo.toml
examples/soroban/auth/src/: lib.rs  subcontract.rs  test.rs
examples/soroban/calculator/: Cargo.toml
examples/soroban/calculator/src/: lib.rs  test.rs
examples/soroban/core/: Cargo.toml
examples/soroban/cross_contract/: Cargo.toml
examples/soroban/cross_contract/contract_a/: Cargo.toml
examples/soroban/cross_contract/contract_a/src/: lib.rs  subcontract.rs
examples/soroban/cross_contract/contract_b/: Cargo.toml
examples/soroban/cross_contract/contract_b/src/: lib.rs  subcontract.rs
examples/soroban/cross_contract/contract_c/: Cargo.toml
examples/soroban/cross_contract/contract_c/src/: error.rs  lib.rs  subcontract.rs
examples/soroban/custom_types/: Cargo.toml
examples/soroban/custom_types/src/: lib.rs  subcontract.rs  test.rs
examples/soroban/deep_contract_auth/: Cargo.toml
examples/soroban/deep_contract_auth/src/: lib.rs  test.rs
examples/soroban/deep_contract_auth/test_snapshots/test/: test.1.json
examples/soroban/deployer/: Cargo.toml
examples/soroban/deployer/contract/: Cargo.toml
examples/soroban/deployer/contract/src/: contract.rs  lib.rs
examples/soroban/deployer/deployer/: Cargo.toml
examples/soroban/deployer/deployer/src/: deployer.rs  lib.rs  test.rs
examples/soroban/errors/: Cargo.toml
examples/soroban/errors/src/: counter.rs  lib.rs  test.rs
examples/soroban/events/: Cargo.toml
examples/soroban/events/src/: counter.rs  test.rs
examples/soroban/ft/: Cargo.toml
examples/soroban/ft/src/: ft.rs
examples/soroban/hello_world/: Cargo.toml
examples/soroban/hello_world/src/: lib.rs  subcontract.rs  test.rs
examples/soroban/increment/: Cargo.toml
examples/soroban/increment-init/: Cargo.toml
examples/soroban/increment-init/src/: counter.rs  lib.rs  test.rs
examples/soroban/increment/src/: counter.rs  lib.rs  test.rs
examples/soroban/liquidity_pool/: Cargo.toml
examples/soroban/liquidity_pool/src/: error.rs  lib.rs  liquidity_pool.rs  test.rs  token.rs
examples/soroban/logging/: Cargo.toml
examples/soroban/logging/src/: lib.rs  subcontract.rs  test.rs
examples/soroban/simple_account/: Cargo.toml
examples/soroban/simple_account/src/: error.rs  lib.rs  subcontract.rs  test.rs
examples/soroban/single_offer/: Cargo.toml
examples/soroban/single_offer/src/: error.rs  lib.rs  single_offer.rs  test.rs
examples/soroban/status_message/src/: lib.rs  status_message.rs  test.rs
examples/soroban/timelock/: Cargo.toml
examples/soroban/timelock/src/: error.rs  lib.rs  test.rs  timelock.rs
examples/soroban/token/: Cargo.toml
examples/soroban/token/src/: error.rs  lib.rs  test.rs  token.rs
examples/soroban/ttl/: Cargo.toml
examples/soroban/ttl/src/: lib.rs  subcontract.rs  test.rs
test/asset/: Cargo.toml
test/asset-two/: Cargo.toml
test/asset-two/src/: lib.rs
test/asset/src/: lib.rs  types.rs
test/normal/: Cargo.toml
test/normal/src/: lib.rs
