[package]
name = "loam-registry"
description = "A crate for managing and deploying smart contracts on the Soroban blockchain."
documentation = "https://docs.rs/loam-registry"
version = "0.1.0"
authors = ["Willem Wyndham <willem@ahalabs.dev>"]
license = "Apache-2.0"
rust-version = "1.69"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
loam-sdk = { workspace = true }
loam-subcontract-core = { workspace = true }
example-core = { path = "../../examples/soroban/core" }


[dev_dependencies]
loam-sdk = { workspace = true, features = ["soroban-sdk-testutils"] }
assert_matches = "1.5.0"

[package.metadata.loam]
contract = true

# should add this here
#[package.metadata.loam.dependencies]