[package]
name = "loam-sdk"
version = "0.6.16"
edition = "2021"
description = "SDK for writing smart contracts"
license = "Apache-2.0"
repository = "https://github.com/loambuild/loam/tree/main/crates/loam-sdk"

[lib]
crate-type = ["rlib"]

[dependencies]
loam-sdk-macro = { path = "../loam-sdk-macro", version = "0.8.6" }
loam-soroban-sdk = { path = "../loam-soroban-sdk", version = "0.6.16", optional = true }


[features]
default = ["loam-soroban-sdk"]
soroban-sdk-testutils = ["loam-soroban-sdk/testutils"]
soroban-sdk-alloc = ["loam-soroban-sdk/alloc"]
