[package]
name = "loam-soroban-sdk"
version = "0.6.15"
edition = "2021"
description = "A wrapper around the soroban-sdk and soroban-auth, providing some soroban specific traits"
license = "Apache-2.0"
repository = "https://github.com/loambuild/loam/tree/main/crates/loam-soroban-sdk"

[lib]
crate-type = ["rlib"]

[dependencies]
loam-sdk-macro = { path = "../loam-sdk-macro", version = "0.8.5" }
soroban-sdk = { workspace = true, default-features = false }
soroban-auth = { workspace = true, default-features = false }

[target.'cfg(not(target_family="wasm"))'.dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-auth = { workspace = true, features = ["testutils"] }

[features]
default = []
testutils = ["soroban-sdk/testutils", "soroban-auth/testutils"]
alloc = ["soroban-sdk/alloc", "soroban-auth/alloc"]
