[package]
name = "example-liquidity-pool"
version = "0.0.0"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
loam-sdk = { workspace = true, features = ["loam-soroban-sdk"] }
loam-subcontract-core = { workspace = true }
num-integer = { version = "0.1.45", default-features = false, features = ["i128"] }
example-token = { path = "../token" }

[package.metadata.loam]
contract = true
